# MiddWeb

./: README.md  pyproject.toml  requirements.txt
sng-demo/: Dockerfile.dockerfile  app.py  pyproject.toml  start.sh
