[tool.poetry]
name = "MiddGoWeb"
version = "0.1.0"
description = ""
authors = ["Joeshmoe03 <81983616+Joeshmoe03@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
